White spaces and h2 hidding behind header fixed

--- a/Front-end/Worldlet/src/components/Credit Card/CreditCard.css
+++ b/Front-end/Worldlet/src/components/Credit Card/CreditCard.css
@@ -1,6 +1,6 @@
 .credit-card-container{
-    height: 15%;
-    width: 60%;
+    height: 15vh;
+    width: 60vw;
     background-color: rgb(68, 73, 73);
     border-radius: 25px;
     display: flex;
